# fem-with-dealii-2022

labs/lab-01/: CMakeLists.txt
labs/lab-01/include/: utils.h
labs/lab-01/src/: main.cc  point_tests.cc
labs/lab-02/: CMakeLists.txt
labs/lab-02/source/: step-1.cc  step-2.cc
labs/lab-03/: CMakeLists.txt
labs/lab-03/include/: step-3.h
labs/lab-03/source/: main.cc  step-3.cc
labs/lab-04/: CMakeLists.txt
labs/lab-04/include/: poisson.h
labs/lab-04/source/: poisson.cc  step-4.cc
labs/lab-04/tests/: poisson-tester.cc
labs/lab-05/: CMakeLists.txt
labs/lab-05/include/: poisson.h
labs/lab-05/source/: poisson.cc
