CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(gtest)

FIND_PACKAGE(deal.II 9.2 REQUIRED
HINTS ${deal.II_DIR} ${DEAL_II_DIR} ../ ../../ $ENV{DEAL_II_DIR})

DEAL_II_INITIALIZE_CACHED_VARIABLES()


SET(SOURCES src/main.cc src/point_tests.cc)
SET(HEADERS include/utils.h)
# ADD_EXECUTABLE(gtest ${SOURCE} ${HEADERS})
ADD_EXECUTABLE(gtest src/main.cc src/point_tests.cc)
FIND_PACKAGE(GTest REQUIRED)
# TARGET_INCLUDE_DIRECTORIES(gtest PRIVATE ${CMAKE_SOURCE_DIR})
TARGET_LINK_LIBRARIES(gtest ${GTEST_LIBRARIES} ${GTEST_MAIN_LIBRARIES})   
INCLUDE_DIRECTORIES(${GTEST_INCLUDE_DIRS} ${CMAKE_SOURCE_DIR}/include)


ENABLE_TESTING()

DEAL_II_SETUP_TARGET(gtest DEBUG)
GTEST_DISCOVER_TESTS(gtest)